--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.19.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-charts": "^2.0.0-beta.7",
+    "react-date-range": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
